MDEV-9987 - gen_lex_hash leaks memory, making LeakSanitizer builds fail

Fixed memory leaks in gen_lex_hash.