sql/gen_lex_hash.cc
@@ -310,6 +310,7 @@ void print_find_structs()
   add_structs_to_map(root_by_len,max_len);
   set_links(root_by_len,max_len);
   print_hash_map("sql_functions_map");
+  free(hash_map);
 
   hash_map= 0;
   size_hash_map= 0;
@@ -319,6 +320,7 @@ void print_find_structs()
   add_structs_to_map(root_by_len2,max_len2);
   set_links(root_by_len2,max_len2);
   print_hash_map("symbols_map");
+  free(hash_map);
 }
 
 
